2001-08-11  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Bump version to 1.3.3.

	Add CVS tag Register-1_3_2.

2001-07-24  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* autogen.sh: Improved ordering; stop on error; use "aclocal -I m4".

	* acinclude.m4: Remove.

	* m4/smr_OPTIONAL_LIB.m4:
	* m4/smr_REQUIRED_LIB.m4:
	* m4/smr_WITH_BUILD_PATH.m4: New files.  These replace the old
	smr_CHECK_LIB macro in acinclude.m4.

	* Makefile.am (EXTRA_DIST): Distribute new m4 files and
	register_UI.globals.

	* INSTALL.register: Describe usage of register_UI.globals.

	* configure.in: Use new macros.  Check for glut, GLU, and GL
	libraries.

2001-07-09  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* acinclude.m4 (AC_HELP_STRING): Disable the too-clever pretty
	formatter.

2001-05-22  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* branch-1_3 merge: Many files added for autoconfig.

	* acinclude.m4: New.  Concatenation of the two m4 files
	distributed from "smr_macros-0.2.4"
	[from www.cs.mcgill.ca/~stever/software].

	* User_interface/main/main.c:
	* User_interface/Include/user_interface.h:
	* Tagtoxfm/tagtoxfm.c:
	* Functionality/initialize/initialize.c:
	* Functionality/Include/register.h: Change include from "foo.h" to
	"bicpl/foo.h", to match current practice of the "bicpl" library
	(formerly known as BIC_PL).

	* configure.in: New.  Added infrastructure for autoconf-generated
	build procedure.  The subdirectories Functionality, Graphics, 
	UI_calls_F, and User_interface do not yet have automake-generated
	makefiles; they include "Makefile.include", however, which now
	*is* generated, so some of the variable definitions are generated
	there automatically.

	* common_include.h: Change include from "internal_volue_io.h" to
	"volume_io/internal_volume_io.h", to match recent MINC practice.

2001-05-22  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* User_interface/event_callbacks/tag_events.c:	Rolled back
	to version 1.7.
