@@ -2,3 +2,6 @@ noinst_LIBRARIES = libdummy.a
 libdummy_a_SOURCES = initialize.c main.c
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/User_interface/Include 	-I$(top_srcdir)/UI_calls_F/Include 	-I$(top_srcdir)/Graphics/Include 	$(MNI_INCLUDES) $(X_CFLAGS)
+
+AM_CFLAGS = -DLIBDIR=\"$(libdir)\"
+
