@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(common_include.h)
-AM_INIT_AUTOMAKE(Register,1.3.3-1)
+AM_INIT_AUTOMAKE(Register,1.3.3)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
