@@ -1,10 +1,9 @@
-    New in Release 1.3.3-1
-
-* added EPM binary packaging support
-
     New in Release 1.3.3
 
-* more build fixes.
+* More build fixes.
+* Add EPM binary packaging support.
+* File "register_UI.globals" is installed into $(prefix)/lib, set
+  for "rgb" mode, which appears to be the default these days.
 
 	New in Release 1.3.2
 
